manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: production
spec:
  selector:
    app: nginx-web ##nginx metadata name
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
